--- a/src/main/webapp/scripts/app/application/identity/identity-light-view.html
+++ b/src/main/webapp/scripts/app/application/identity/identity-light-view.html
@@ -1,4 +1,7 @@
 <div ng-cloak>
+	<div class="form-group" ng-if="showForeignerNumber">
+        <label translate="identity.form.foreignerNumber">Foreigner number</label> : <span>0123456789</span>
+    </div>
 	<div class="form-group">
         <label translate="identity.form.lastName">LastName</label> : <span>{{::identity.lastName}}</span>
     </div>
