--- a/src/main/resources/mails/admissibilityRenewalEmail.html
+++ b/src/main/resources/mails/admissibilityRenewalEmail.html
@@ -18,7 +18,7 @@
             <br/><br/>
             <em th:text="#{${emailSignature}}">portail</em>
             <br/><br/>
-            <b><em th:text="#{email.signature.administration}">administration</em></b>
+            <b><em th:text="#{${emailSignatureEnd}}">administration</em></b>
         </p>
     </body>
 </html>
