--- a/src/main/resources/mails/decisionEmail.html
+++ b/src/main/resources/mails/decisionEmail.html
@@ -21,7 +21,7 @@
             <br/><br/>
             <em th:text="#{${emailSignature}}">portail</em>
             <br/><br/>
-            <b><em th:text="#{email.signature.administration}">administration</em></b>
+            <b><em th:text="#{${emailSignatureEnd}}">administration</em></b>
         </p>
     </body>
 </html>
