--- a/src/main/webapp/scripts/app/agent/issuing/issuing.html
+++ b/src/main/webapp/scripts/app/agent/issuing/issuing.html
@@ -28,28 +28,28 @@
 		</div>
 	</div>
 	
-	<!-- BIOMETRICS -->
+	<!-- SIGNATURE -->
 	<div class="row">
 		<div class="col-xs-6 col-sm-5 col-sm-offset-1">
-			<div class="collapsable-panel" data-toggle="collapse" data-target="#panelFingerprints">
+			<div class="collapsable-panel" data-toggle="collapse" data-target="#panelSignature">
 				<div class="panel-heading">
 					<span class="glyphicon glyphicon-triangle-bottom"></span>
-					<h5 class="panel-title" translate="issuing.form.fingerprints">fingerprints</h5>
+					<h5 class="panel-title" translate="issuing.form.signature">signature</h5>
 				</div>
 			</div>
 		</div>
-		<div class="col-xs-6 validation-form">
-			<i ng-show="fingerprintsMatched" class="fa fa-check-circle"></i>
-		</div>
 	</div>
-	<div id="panelFingerprints" class="row collapse in">
+	<div id="panelSignature" class="row collapse in">
 		<div class="col-sm-11 col-sm-offset-1">
 			<div class="row validation-visualization-row opened">
-				<div class="col-xs-12">
-					<div ng-show="!fingerprints">
-						<button class="btn btn-primary" translate="issuing.form.fingerprints.button" style="width:311px;" ng-click="activateFingerprints()">Fingerprints</button>
-					</div>
-					<img class="img-responsive thumbnail" src="assets/images/Handprints.gif" ng-if="fingerprints" width="800px" />
+				<div class="col-xs-12 col-sm-6">
+					<canvas class="thumbnail" id="signature-pad" width="400" height="200"></canvas>
+					<button class="btn btn-primary btn-signature" 
+							onclick="angular.element(this).scope().clearSignature(signaturepad)" 
+							translate="issuing.form.signature.button.clear">Clear</button>
+				</div>
+				<div class="col-xs-12 col-sm-6" ng-show="padsignature">
+				    <img src="{{padsignature}}" class="img-responsive thumbnail" style="max-width: 311px;">
 				</div>
 			</div>
 		</div>
@@ -60,11 +60,13 @@
     	<button class="btn btn-success"
     			ng-class="{'btn-right': project.valid == null}"
     			translate="issuing.form.button.accept"
-    			ng-disabled="!fingerprintsMatched" 
     			ng-click="issue()" >Accept</button>
 	</div>
 </div>
     
 <script type="text/javascript">
 	$("html, body").animate({ scrollTop: 0 }, "slow");
+	
+	var canvas = document.getElementById("signature-pad");
+	var signaturepad = new SignaturePad(canvas);
 </script>
