--- a/src/main/webapp/scripts/app/application/address/address-light-view.html
+++ b/src/main/webapp/scripts/app/application/address/address-light-view.html
@@ -17,7 +17,7 @@
 	<div class="form-group">
 		<label translate="address.form.city">City</label> : <span>{{::address.city}}</span>
 	</div>
-	<div class="form-group">
+	<div class="form-group" ng-show="false">
 		<label translate="address.form.country">Country</label> : <span>{{::$root.countries[address.country]}}</span>
 	</div>
 </div>
