--- a/src/main/webapp/scripts/app/application/address/address.html
+++ b/src/main/webapp/scripts/app/application/address/address.html
@@ -15,11 +15,12 @@
 		    	</div>
 		    </div>
 		    <div class="col-xs-10 form-title-text">
-		    	<p translate="procedure.address.step.long">Address</p>
+		    	<p translate="procedure.address.step.long" ng-if="!address.modeV2">Address</p>
+		    	<p translate="procedure.address.step.long.{{address.valid}}" ng-if="address.modeV2">Address</p>
 		    </div>
 		</div>
 		<br>
-	    <div class="row" ng-if="!address.validateOn">
+	    <div class="row" ng-if="!readOnlyMode">
 			<div class="col-xs-8 col-xs-offset-2 col-sm-6 col-sm-offset-3">
 		        
 		        <address-form-light ng-model="address" with-tooltip="true"></address-form-light>
@@ -54,7 +55,7 @@
 		        </div>
 		    </div>
 		</div>
-		<div ng-if="needDocuments && !address.validateOn">
+		<div ng-if="needDocuments && !readOnlyMode">
 			<br>
 			<div class="row">
 				<div class="col-xs-1 col-xs-offset-1">
@@ -75,7 +76,7 @@
 			   	</div>
 			</div>
 		</div>
-		<div class="row" ng-if="address.validateOn">
+		<div class="row" ng-if="readOnlyMode">
 			<div class="col-xs-8 col-xs-offset-3 col-sm-6 col-sm-offset-5">
 				<ng-include src="'scripts/app/application/address/address-light-view.html'"></ng-include>
 			    <div class="form-group">
@@ -99,7 +100,9 @@
 		<br>
 	    <div class="row row-center">
         	<button type="button" class="btn btn-default" translate="global.button.back" ng-click="back()">Back</button>
-       		<button ng-if="address.validateOn" type="button" class="btn btn-danger btn-right" translate="global.button.report" ng-click="report()">Report</button>
+       		<button ng-if="currentApplicationBackup" type="button" class="btn btn-danger btn-right" translate="global.button.cancel" ng-click="cancel()">Cancel</button>
+       		<button ng-if="readOnlyMode && !address.modeV2" type="button" class="btn btn-danger btn-right" translate="global.button.report" ng-click="report()">Report</button>
+       		<button ng-if="readOnlyMode && address.modeV2" type="button" class="btn btn-danger btn-right" translate="global.button.modify" ng-click="modify()">Report</button>
         	<button type="submit" class="btn btn-primary btn-right" translate="global.button.continue"
         			 ng-disabled="addressForm.$invalid || addressForm.$submitted">Continue</button>
         </div>
