--- a/src/main/webapp/scripts/app/application/rdv/rdv.html
+++ b/src/main/webapp/scripts/app/application/rdv/rdv.html
@@ -6,7 +6,7 @@
 
 	<form name="rdvForm" role="form" class="form-horizontal" novalidate ng-submit="save()" show-validation>
 		<div class="row row-center form-title-text">
-		    <p translate="rdv.form.title">RDV</p>
+		    <p translate="rdv.form.title.{{applicationNature}}">RDV</p>
 		</div>
 		<br>
 		<div class="row">
