--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -216,8 +216,13 @@
     <script src="scripts/app/agent/identification/interview.controller.js"></script>
     <script src="scripts/app/agent/validation/validation.js"></script>
     <script src="scripts/app/agent/validation/validation.controller.js"></script>
+    <script src="scripts/app/agent/receipt/receipt.js"></script>
+    <script src="scripts/app/agent/receipt/receipt.controller.js"></script>
     <script src="scripts/app/agent/issuing/issuing.js"></script>
     <script src="scripts/app/agent/issuing/issuing.controller.js"></script>
+    <script src="scripts/app/agent/issuing/issuing_search.controller.js"></script>
+    <script src="scripts/app/agent/follow/follow.js"></script>
+    <script src="scripts/app/agent/follow/follow.controller.js"></script>
     <script src="scripts/app/agent/reconstruction/reconstruction.js"></script>
     <script src="scripts/app/agent/reconstruction/reconstruction.controller.js"></script>
     <!-- FIN AGENT -->
