--- a/src/main/webapp/scripts/app/application/identity/identity-view.html
+++ b/src/main/webapp/scripts/app/application/identity/identity-view.html
@@ -13,7 +13,7 @@
 	    <div class="form-group">
 	        <label translate="identity.form.childsNumber">ChildsNumber</label> : <span>{{::identity.childsNumber}}</span>
 	    </div>
-	    <div class="form-group">
+	    <div class="form-group" ng-if="needBrothers">
 	        <label translate="identity.form.brothersNumber">BrothersNumber</label> : <span>{{::identity.brothersNumber}}</span>
 	    </div>
 		<div class="form-group">
