--- a/src/main/webapp/scripts/app/application/project/project-sejour_tmp_etudiant-view.html
+++ b/src/main/webapp/scripts/app/application/project/project-sejour_tmp_etudiant-view.html
@@ -7,6 +7,9 @@
             <label translate="project.form.university">University</label> : <span>{{::project.university}}</span>
         </div>
         <div class="form-group">
+            <label translate="project.form.trainingType">Training type</label> : <span>{{::'project.form.trainingType.' + project.trainingType | translate}}</span>
+        </div>
+        <div class="form-group">
             <label translate="project.form.training">Training</label> : <span>{{::project.training}}</span>
         </div>
         <div class="form-group">
