--- a/src/main/webapp/scripts/app/application/project/project-sejour_tmp_etudiant.html
+++ b/src/main/webapp/scripts/app/application/project/project-sejour_tmp_etudiant.html
@@ -33,6 +33,21 @@
 		            </div>
 		        </div>
 		        <div class="form-group">
+		            <label translate="project.form.trainingType" for="field_trainingType">Training</label>
+		            <select class="form-control" name="trainingType" ng-model="project.trainingType" id="field_trainingType" required>
+		                <option value="2" translate="project.form.trainingType.2">2</option>
+		                <option value="3" translate="project.form.trainingType.3">3</option>
+		                <option value="4" translate="project.form.trainingType.4">4</option>
+		                <option value="5" translate="project.form.trainingType.5">5</option>
+		                <option value="8" translate="project.form.trainingType.8">8</option>
+		            </select>
+		            <div ng-show="projectForm.trainingType.$dirty && projectForm.trainingType.$invalid">
+		                <p class="help-block" ng-show="projectForm.trainingType.$error.required" translate="entity.validation.required">
+		                    This field is required.
+		                </p>
+		            </div>
+		        </div>
+		        <div class="form-group">
 		            <label translate="project.form.training" for="field_training">Training</label>
 		            <input type="text" class="form-control" name="training" id="field_training"
 		                    ng-model="project.training" required>
