--- a/src/main/webapp/scripts/app/usager/etudierTmp/etudierTmp.html
+++ b/src/main/webapp/scripts/app/usager/etudierTmp/etudierTmp.html
@@ -16,7 +16,7 @@
 	    	</div>
 	    </div>
 	    <div class="col-xs-9 step-text">
-	    	<p translate="procedure.identity.step.long">Identity</p>
+	    	<p translate="procedure.identity.step.long.{{hasIdentityData}}">Identity</p>
 	    </div>
 	</div>
     <div class="row">
@@ -26,7 +26,7 @@
 	    	</div>
 	    </div>
 	    <div class="col-xs-9 step-text">
-	    	<p translate="procedure.address.step.long">Address</p>
+	    	<p translate="procedure.address.step.long.{{hasAddressData}}">Address</p>
 	    </div>
 	</div>
     <div class="row">
