--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -106,7 +106,7 @@
 		        <box-menu boxtitle="main.agent.title.application" boxlogo="search" disabled="true"></box-menu>
 	        </div>
 		    <div class="row">
-		        <box-menu boxtitle="main.agent.title.follow" boxlogo="newspaper-o" ui-sref="follow"></box-menu>
+		        <box-menu boxtitle="main.agent.title.follow" boxlogo="newspaper-o" ui-sref="follow({tab: 'recus'})"></box-menu>
 	        </div>
         	<div class="row">
 		        <box-menu boxtitle="main.agent.title.rdv.setting" boxlogo="calendar" disabled="true"></box-menu>
