modif menu main + correction bug email et popup validation

--- a/src/main/webapp/scripts/app/agent/validation/validation.html
+++ b/src/main/webapp/scripts/app/agent/validation/validation.html
@@ -148,7 +148,7 @@
         <h4 class="modal-title" id="myModalLabel" translate="validation.modal.title">Modal title</h4>
       </div>
       <div class="modal-body">
-      	<span translate="validation.modal.text">modal text</span>
+      	<span translate="validation.modal.text" translate-values="{ studentName: '{{studentName}}'}">modal text</span>
       </div>
       <div class="modal-footer" style="text-align: center;">
         <button type="button" class="btn btn-default" data-dismiss="modal" translate="validation.modal.button">OK</button>
